Change EventWidget to use FXML (makes architecture much easier)